css/style.css
#digital-clock {
 background-color: darkblue;
 color: rgb(99, 12, 12)
 width: 35%;
 margin: auto;
 padding-top: 20px;
 padding-bottom: 20px;
 padding-left: 20px;
 padding-right: 20px;
 border-radius: 10px;
 border: 5px;
 border-color: black
 font-family: Arial;
 font-size: 64px;
 text-align: center;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.container  {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.button  {
    font-weight: bold;
    border-radius: 15px;
    border: none;
    color: darkred;
    padding: 4px 8px;
    margin-left: 4px;
    align-items: center;
    cursor: pointer;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}    

.controls  {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
}

